[package]
name = "ynab_tui"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tui = "0.19"
crossterm = "0.25"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.11.13", features = ["json"]}
serde_json = "1.0.88"
serde = { version = "1.0.147", features = ["derive"]}
chrono = { version = "0.4.23", features = ["serde"] }
dotenvy = "0.15.6"
sqlite = "0.30.1"
